# gxde-system-assistant

./: CMakeLists.txt  README.md  sysbro-express.desktop  sysbro.desktop
debian/: changelog  control
gxde-sysbro-more-desktop/: CMakeLists.txt  dde-control-center.desktop  deepin-screen-recorder.desktop  gxde-app-upgrader.desktop  gxde-boot-maker.desktop  gxde-deb-installer.desktop  gxde-picker.desktop  gxde-terminal.desktop  spark-store.desktop
src/: main.cpp  mainwindow.cpp  toolsitemdelegate.cpp  toolslistmodel.cpp  toolslistmodel.h  utils.cpp
src/resources/: gxde-system-assistant
sysbro-express/: mainwindow.cpp
sysbro-network-test/: homepage.cpp  networkmanager.cpp
