install(FILES spark-store.desktop DESTINATION share/GXDE/gxde-system-assistant/tool-extensions)
install(FILES gxde-deb-installer.desktop DESTINATION share/GXDE/gxde-system-assistant/tool-extensions)
install(FILES gxde-boot-maker.desktop DESTINATION share/GXDE/gxde-system-assistant/tool-extensions)
install(FILES gxde-picker.desktop DESTINATION share/GXDE/gxde-system-assistant/tool-extensions)
install(FILES gxde-app-upgrader.desktop DESTINATION share/GXDE/gxde-system-assistant/tool-extensions)
install(FILES deepin-screen-recorder.desktop DESTINATION share/GXDE/gxde-system-assistant/tool-extensions)
install(FILES dde-control-center.desktop DESTINATION share/GXDE/gxde-system-assistant/tool-extensions)
install(FILES gxde-terminal.desktop DESTINATION share/GXDE/gxde-system-assistant/tool-extensions)